Added background image and fixed hiding hyper fuel bar when menu loads

--- a/SpaceInvaders/resources.qrc
+++ b/SpaceInvaders/resources.qrc
@@ -15,5 +15,7 @@
         <file>Sounds/death.wav</file>
         <file>Images/frozenship.png</file>
         <file>Images/hypership.png</file>
+        <file>Images/deadship.png</file>
+        <file>Images/background.png</file>
     </qresource>
 </RCC>
